# pk2-project

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  README.md  config.h.in  temat-i-interfejs.docx
docs/: Doxyfile  klasy-i-struktury-danych.docx  ~$asy-i-struktury-danych.docx
include/: App.h  CityGraph.h  Point.h  UndirectedGraph.h  graph_traits.h  metrics.h
lib/graphs/: CMakeLists.txt
lib/graphs/include/: DirectedGraph.h  GraphBase.h  UndirectedGraph.h  graph_traits.h
lib/metrics/: CMakeLists.txt
lib/metrics/include/: metrics.h
lib/metrics/src/: metrics.cpp
src/: App.cpp  CityGraph.cpp  Path.cpp  main.cpp  metrics.cpp
src/App/: App.cpp  App.h
src/CityGraph/: CityGraph.h  Point.h
src/FileHandler/: FileHandler.cpp  FileHandler.h
src/Map/: Map.cpp  Map.h  Point.h
src/Path/: Path.cpp  Path.h
src/Query/: Query.cpp  Query.h
testdata/: connmatrix.txt  coords.txt  queries.txt
